--- a/Home.html
+++ b/Home.html
@@ -10,6 +10,8 @@
   <meta http-equiv="content-type" content="text/html;charset=utf-8" />
 
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  
+  <meta name="image" property="og:image" content="top-view-desk.jpg">
 
   <title>Nancy Jean Lopez | Technical Writer | Editor</title>
 
