--- a/Home.html
+++ b/Home.html
@@ -61,7 +61,7 @@
       </h3>
       <p>Palm Coast, Florida, and Remote</p>
       <p><a href="mailto:nancyjeanlopez@gmail.com">NancyJeanLopez@gmail.com</a></p>
-      <p><a href="mailto:nancyjeanlopez@gmail.com" class="fa fa-google"></a><a href="https://www.linkedin.com/in/nancyjeanlopez/" class="fa fa-linkedin"><a href="#" class="fa fa-github"></a></a><a href="https://github.com/nancyjeanlopez"
+      <p><a href="mailto:nancyjeanlopez@gmail.com" class="fa fa-google"></a><a href="https://www.linkedin.com/in/nancyjeanlopez/" class="fa fa-linkedin"><a href="https://github.com/nancyjeanlopez" class="fa fa-github"></a></a><a href="https://www.deviantart.com/nancyjeanlopez"
           class="fa fa-deviantart"></a></p>
 
     </div>
