--- a/Home.html
+++ b/Home.html
@@ -228,7 +228,7 @@
       </p>
 
       <p>
-        <a href="https://wrtethedocs.org">Write The Docs</a><br />A global community of people who care about documentation
+        <a href="https://writethedocs.org">Write The Docs</a><br />A global community of people who care about documentation
       </p>
 
       <p>
