--- a/Home.html
+++ b/Home.html
@@ -11,10 +11,10 @@
 
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   
-  <meta name="image" property="og:image" content="top-view-desk.jpg">
-
   <title>Nancy Jean Lopez | Technical Writer | Editor</title>
 
+  <link rel="image_src" href="top-view-desk.jpg" />
+  
   <link rel="stylesheet" type="text/css" href="stylev3.css" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
 
