--- a/Home.html
+++ b/Home.html
@@ -11,7 +11,7 @@
 
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   
-  <meta property="og:image" content="https://nancyjeanlopez.github.io/MyCV/top-view-desk.jpg"/> 
+  <meta property="og:image" content="top-view-desk.jpg"/> 
   
   <title>Nancy Jean Lopez | Technical Writer | Editor</title>
 
