--- a/Home.html
+++ b/Home.html
@@ -11,9 +11,13 @@
 
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   
-  <meta property="og:image" content="top-view-desk.jpg"/> 
+  <meta property="og:image:url" content="https://nancyjeanlopez.github.io/MyCV/top-view-desk.jpg"/> 
+  <meta property="og:image:type" content="image/jpeg">
+  <meta property="og:image:width" content="200">
+  <meta property="og:image:height" content="200">
   
   <title>Nancy Jean Lopez | Technical Writer | Editor</title>
+  <meta name="description" content="Hello! I'm Nancy and this is my Curriculum Vitae. I'm a technical writer, editor, and UCF graduate, passionate about working in STEM." />
 
   <link rel="stylesheet" type="text/css" href="stylev3.css" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
