--- a/Home.html
+++ b/Home.html
@@ -11,7 +11,7 @@
 
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   
-  <meta property="og:image" content="https://nancyjeanlopez.github.io/MyCV/top-view-desk.jpg"/> 
+  <meta property="og:image" content="https://nancyjeanlopez.github.io/MyCV/top-view-desk.jpg"> 
   <meta property="og:image:type" content="image/jpeg">
   <meta property="og:image:width" content="200">
   <meta property="og:image:height" content="200">
