--- a/Home.html
+++ b/Home.html
@@ -9,12 +9,12 @@
 
   <meta http-equiv="content-type" content="text/html;charset=utf-8" />
 
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   
-  <meta property="og:image" content="https://nancyjeanlopez.github.io/MyCV/top-view-desk.jpg"> 
-  <meta property="og:image:type" content="image/jpeg">
-  <meta property="og:image:width" content="200">
-  <meta property="og:image:height" content="200">
+  <meta property="og:image" content="https://nancyjeanlopez.github.io/MyCV/top-view-desk.jpg" /> 
+  <meta property="og:image:type" content="image/jpeg" />
+  <meta property="og:image:width" content="200" />
+  <meta property="og:image:height" content="200" />
   
   <title>Nancy Jean Lopez | Technical Writer | Editor</title>
   <meta name="description" content="Hello! I'm Nancy and this is my Curriculum Vitae. I'm a technical writer, editor, and UCF graduate, passionate about working in STEM." />
