--- a/Home.html
+++ b/Home.html
@@ -11,7 +11,7 @@
 
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   
-  <meta property="og:image" content="https://nancyjeanlopez.github.io/MyCV/top-view-desk.jpg" /> 
+  <meta property="og:image" content="https://nancyjeanlopez.github.io/MyCV/top-view-desk(s).jpg" /> 
   <meta property="og:image:type" content="image/jpeg" />
   <meta property="og:image:width" content="200" />
   <meta property="og:image:height" content="200" />
@@ -257,7 +257,7 @@
       </p>
 
       <figure>
-        <a href='https://www.freepik.com/photos/background'><img src="top-view-desk.jpg" alt="Photo created by freepik - www.freepik.com" /></a>
+        <a href='https://www.freepik.com/photos/background'><img src="top-view-desk(s).jpg" alt="Photo created by freepik - www.freepik.com" /></a>
         <figcaption>
           <a href="https://www.freepik.com/photos/background">Photo created by freepik - www.freepik.com</a>
         </figcaption>
