--- a/Home.html
+++ b/Home.html
@@ -87,7 +87,7 @@
         programs. In high school and college, my extracurricular interests included creative writing, theatre, and humanities. I also developed an interest in computers, technology, and web design, adapting my skills to embrace an increasingly
         technological era.</p>
       <p>
-        In college, I enrolled in several technical communication courses, including technical writing, editing, project management, and web design. I also had the opportunity to work for UCF’s literary magazine, The Florida Review, as a student
+        In college, I enrolled in several technical communication courses, including technical writing, editing, project management, and web design. I also had the opportunity to work for UCF’s literary magazine, <i>The Florida Review</i>, as a student
         editor intern. As an intern, I experienced the full publishing process from start to finish: reading and selecting submissions, editing works for publication, and marketing the magazine to the public. As a senior, I joined the Society for
         Technical Communicators to continue honing my skills as a writer and editor and make my transition from student to working professionally in the writing industry.
       </p>
