--- a/Home.html
+++ b/Home.html
@@ -259,7 +259,7 @@
       </p>
 
       <figure>
-        <a href='https://www.freepik.com/photos/background'><img src="top-view-desk(s).jpg" alt="Photo created by freepik - www.freepik.com" /></a>
+        <img src="top-view-desk(s).jpg" alt="Photo created by freepik - www.freepik.com" />
         <figcaption>
           <a href="https://www.freepik.com/photos/background">Photo created by freepik - www.freepik.com</a>
         </figcaption>
