--- a/Home.html
+++ b/Home.html
@@ -100,7 +100,7 @@
         My personal life is an amalgam of hobbies and interests. In addition to being an avid reader, I am a roller-coaster enthusiast, photography hobbytist, and movie connoisseur. I’m handy with a pen as well as a cordless drill, cast-iron skillet,
         and Xbox controller. I'm a collector of unicorns, books, and unusually large sunglasses, but my most meaningful collections are memories, stories, and life lessons. I have stood in Ernest Hemingway's study in Key West and I have walked along
         Robert Frost's "Mending Wall" around his New Hampshire home, pseudo-spiritual experiences that augmented my appreciation for the writen word. Literature and writing have opened my life to a world of possiblities and perspectives. It is my
-        life's mission to use my skills to make meaninful contributions to humankind's contiuously evolving wealth of knowledge.
+        life's mission to use my skills to make meaningful contributions to humankind's contiuously evolving wealth of knowledge.
       </p>
 
     </div>
