--- a/Home.html
+++ b/Home.html
@@ -51,6 +51,9 @@
     </nav>
 
   </section>
+  
+  <section id="bizcard">
+    
   <div class="intro">
 
     <div class="hero">
@@ -73,6 +76,8 @@
     </div>
 
   </div>
+  
+  </section>
 
   <span class="anchor" id="abou"></span>
 
