--- a/Home.html
+++ b/Home.html
@@ -45,7 +45,7 @@
         <li><a href="#expe">Experience</a></li>
         <li><a href="#port">Portfolio</a></li>
         <li><a href="#educ">Education</a></li>
-        <li><a href="#affl">Affliations</a></li>
+        <li><a href="#affl">Affiliations</a></li>
         <li><a href="#read">Resources</a></li>
       </ul>
     </nav>
@@ -93,18 +93,18 @@
         technological era.</p>
       <p>
         In college, I enrolled in several technical communication courses, including technical writing, editing, project management, and web design. I also had the opportunity to work for UCF’s literary magazine, <i>The Florida Review</i>, as a student
-        editor intern. As an intern, I experienced the full publishing process from start to finish: reading and selecting submissions, editing works for publication, and marketing the magazine to the public. As a senior, I joined the Society for
+        editor intern. As an intern, I experienced the complete publishing process from start to finish: reading and selecting submissions, editing works for publication, and marketing the magazine to the public. As a senior, I joined the Society for
         Technical Communicators to continue honing my skills as a writer and editor and make my transition from student to working professionally in the writing industry.
       </p>
       <p>
         I have considerable marketing experience writing for an online advertising firm. As a freelance writer and self-starting entrepreneur, I worked with small businesses to create engaging SEO blogs, improve online search rankings, and increase
         website traffic. My clients included HVAC companies, fashion designers, medical
-        equipment manufacturers, holistic practitioners, and home builders, just to name a few. My job as a freelance writer allowed me to explore and write about a plethora of subjects while simultaneously adapting my writing to different audiences.
+        equipment manufacturers, holistic practitioners, and home builders, to name a few. My job as a freelance writer allowed me to explore and write about a plethora of subjects while simultaneously adapting my writing to different audiences.
       </p>
       <p>
-        My personal life is an amalgam of hobbies and interests. In addition to being an avid reader, I am a roller-coaster enthusiast, photography hobbytist, and movie connoisseur. I’m handy with a pen as well as a cordless drill, cast-iron skillet,
-        and Xbox controller. I'm a collector of unicorns, books, and unusually large sunglasses, but my most meaningful collections are memories, stories, and life lessons. I have stood in Ernest Hemingway's study in Key West and I have walked along
-        Robert Frost's "Mending Wall" around his New Hampshire home, pseudo-spiritual experiences that augmented my appreciation for the writen word. Literature and writing have opened my life to a world of possiblities and perspectives. It is my
+        My personal life is an amalgam of hobbies and interests. In addition to being an avid reader, I'm a roller-coaster enthusiast, photography hobbyist, and movie connoisseur. I’m handy with a pen as well as a cordless drill, cast-iron skillet,
+        and Xbox controller. I'm a collector of unicorns, books, and unusually large sunglasses, but my most meaningful collections are memories, stories, and life lessons. I have stood in Ernest Hemingway's study in Key West, and I have walked along
+        Robert Frost's "Mending Wall" around his New Hampshire home, pseudo-spiritual experiences that augmented my appreciation for the written word. Literature and writing have opened my life to a world of possibilities and perspectives. My
         life's mission to use my skills to make meaningful contributions to humankind's continuously evolving wealth of knowledge.
       </p>
 
@@ -166,8 +166,7 @@
         As a contributing editor, I copyedited Brittany Herrmann’s “Fake News, Real Author” article for publication in UCF’s journal for undergraduate research.</p>
       <p><i>Internet Addiction</i> (<a href="https://nancyjeanlopez.github.io/iAddiction/home.html">Link to GitHub</a>)</p>
       <p class="indent">
-        I created this website to host the findings of my research paper on Internet Addiction (IA) as well as mental health resources for people with IA. This site demonstrates my understanding of HTML and CSS coding fundamentals as well as macro
-        photography and
+        I created this website to host the findings of my research paper on Internet Addiction (IA) and mental health resources for people with IA. This site demonstrates my understanding of HTML and CSS coding fundamentals as well as macro-photography and
         Photoshop skills.</p>
 
     </div>
@@ -207,7 +206,7 @@
 
     <div class="text">
 
-      <h1 id="affl" align="center">Affliations</h1>
+      <h1 id="affl" align="center">Affiliations</h1>
 
       <p><a href="http://futuretechnicalcommunicators.com/">Future Technical Communicators of UCF</a>, Student Member
       </p>
