--- a/Home.html
+++ b/Home.html
@@ -70,8 +70,8 @@
       </h3>
       <p>Palm Coast, Florida, and Remote</p>
 
-      <p><a href="mailto:nancyjeanlopez@gmail.com" class="fa fa-google"></a><a href="https://www.linkedin.com/in/nancyjeanlopez/" class="fa fa-linkedin"><a href="https://github.com/nancyjeanlopez" class="fa fa-github"></a></a><a href="https://www.deviantart.com/nancyjeanlopez"
-          class="fa fa-deviantart"></a></p>
+      <p><a href="mailto:nancyjeanlopez@gmail.com" class="fa fa-google" target="_blank"></a><a href="https://www.linkedin.com/in/nancyjeanlopez/" class="fa fa-linkedin" target="_blank"><a href="https://github.com/nancyjeanlopez" class="fa fa-github" target="_blank"></a></a><a href="https://www.deviantart.com/nancyjeanlopez"
+          class="fa fa-deviantart" target="_blank"></a></p>
 
     </div>
 
@@ -126,7 +126,7 @@
         experts to create content. Edited content for grammar, style, and accuracy. </p>
 
       <p><i>Everest Realty Group LLC</i> - June 2016 to present</p>
-      <p class="indent">MARKETING MANAGER - Created and published marketing campaigns via email, websites, and newsletters. Maintained the company <a href="https://www.louisebubser.com/">website</a>, monitored website traffic, and answered client
+      <p class="indent">MARKETING MANAGER - Created and published marketing campaigns via email, websites, and newsletters. Maintained the company <a href="https://www.louisebubser.com/" target="_blank">website</a>, monitored website traffic, and answered client
         inquiries.</p>
       <p class="indent">
         PERSONAL ASSISTANT - Organized realty documents using DotLoop. Hosted open house events and home showings. Provided technical support. Installed and maintained software and hardware.
@@ -155,16 +155,16 @@
 
       <h1 align="center">Portfolio</h1>
 
-      <p><i>Technical Documentation</i> (<a href="https://www.linkedin.com/in/nancyjeanlopez/">View on LinkedIn</a>)</p>
+      <p><i>Technical Documentation</i> (<a href="https://www.linkedin.com/in/nancyjeanlopez/" target="_blank">View on LinkedIn</a>)</p>
       <p class="indent">As Lead General Editor, I managed an 18-person team that produced a 283-page style guide for technical communication students and professionals. Authored the “Grammar” chapter and edited the entire guide for grammar, tone, and
         APA adherence. </p>
-      <p><i>The Florida Review, Volume 44, Number 2, 2020</i> (<a href="https://floridareview.cah.ucf.edu/issue/44-2-fall-2020/">Link to <i>TFR</i></a>)</p>
+      <p><i>The Florida Review, Volume 44, Number 2, 2020</i> (<a href="https://floridareview.cah.ucf.edu/issue/44-2-fall-2020/" target="_blank">Link to <i>TFR</i></a>)</p>
       <p class="indent">As Student Editor Intern, I edited the following pieces according to the Chicago Manual of Style and the magazine’s InDesign format: “Autotopia,” “Magdalene Waiting, or: How I Recovered, or Maybe Didn’t,” and “Grudges That Are
         Best to Hold.” </p>
-      <p><i>Convergence, Volume 3: Issue 2</i> (<a href="https://convergence-rhetoric.net/3.2.3.html">Link to <i>Convergence</i></a>)</p>
+      <p><i>Convergence, Volume 3: Issue 2</i> (<a href="https://convergence-rhetoric.net/3.2.3.html" target="_blank">Link to <i>Convergence</i></a>)</p>
       <p class="indent">
         As a contributing editor, I copyedited Brittany Herrmann’s “Fake News, Real Author” article for publication in UCF’s journal for undergraduate research.</p>
-      <p><i>Internet Addiction</i> (<a href="https://nancyjeanlopez.github.io/iAddiction/home.html">Link to GitHub</a>)</p>
+      <p><i>Internet Addiction</i> (<a href="https://nancyjeanlopez.github.io/iAddiction/home.html" target="_blank">Link to GitHub</a>)</p>
       <p class="indent">
         I created this website to host the findings of my research paper on Internet Addiction (IA) and mental health resources for people with IA. This site demonstrates my understanding of HTML and CSS coding fundamentals as well as macro-photography and
         Photoshop skills.</p>
@@ -208,16 +208,16 @@
 
       <h1 id="affl" align="center">Affiliations</h1>
 
-      <p><a href="http://futuretechnicalcommunicators.com/">Future Technical Communicators of UCF</a>, Student Member
+      <p><a href="http://futuretechnicalcommunicators.com/" target="_blank">Future Technical Communicators of UCF</a>, Student Member
       </p>
 
-      <p><a href="https://www.stc.org/">Society for Technical Commination</a>, Student Member
+      <p><a href="https://www.stc.org/" target="_blank">Society for Technical Commination</a>, Student Member
       </p>
 
-      <p><a href="https://stc-techedit.org/tiki-index.php">Technical Editing SIG</a>, Student Member
+      <p><a href="https://stc-techedit.org/tiki-index.php" target="_blank">Technical Editing SIG</a>, Student Member
       </p>
 
-      <p><a href="https://floridareview.cah.ucf.edu/">The Florida Review</a>, Student Editor Internship
+      <p><a href="https://floridareview.cah.ucf.edu/" target="_blank">The Florida Review</a>, Student Editor Internship
       </p>
 
     </div>
@@ -229,24 +229,28 @@
 
   <section id="main-content">
 
-    <div class="text" align="center">
+    <div class="text">
 
       <h1 id="read" align="center">Resources</h1>
 
       <p>
-        <a href="https://idratherbewriting.com">I'd Rather Be Writing</a><br />Exploring technical writing trends and innovations
+        <a href="https://idratherbewriting.com" target="_blank">I'd Rather Be Writing</a><p>
+      <p class="indent">Exploring technical writing trends and innovations
       </p>
 
       <p>
-        <a href="https://writethedocs.org">Write The Docs</a><br />A global community of people who care about documentation
+        <a href="https://writethedocs.org" target="_blank">Write The Docs</a></p>
+      <p class="indent">A global community of people who care about documentation
       </p>
 
       <p>
-        <a href="https://the-efa.org">The Editorial Freelancers Association</a><br />A network for the mutual support and advancement of freelance editors
+        <a href="https://the-efa.org" target="_blank">The Editorial Freelancers Association</a><p>
+      <p class="indent">A network for the mutual support and advancement of freelance editors
       </p>
 
       <p>
-        <a href="https://techwhirl.com">Tech Whirl</a><br />Helping the world explore the art of content and communication
+        <a href="https://techwhirl.com" target="_blank">TechWhirl</a></p>
+      <p class="indent">Helping the world explore the art of content and communication
       </p>
 
     </div>
