--- a/Home.html
+++ b/Home.html
@@ -233,23 +233,23 @@
 
       <h1 id="read" align="center">Resources</h1>
 
-      <p>
-        <a href="https://idratherbewriting.com" target="_blank">I'd Rather Be Writing</a><p>
+      <p><i>
+        <a href="https://idratherbewriting.com" target="_blank">I'd Rather Be Writing</a></i><p>
       <p class="indent">Exploring technical writing trends and innovations
       </p>
 
-      <p>
-        <a href="https://writethedocs.org" target="_blank">Write The Docs</a></p>
+      <p><i>
+        <a href="https://writethedocs.org" target="_blank">Write The Docs</a></i></p>
       <p class="indent">A global community of people who care about documentation
       </p>
 
-      <p>
-        <a href="https://the-efa.org" target="_blank">The Editorial Freelancers Association</a><p>
+      <p><i>
+        <a href="https://the-efa.org" target="_blank">The Editorial Freelancers Association</a></i><p>
       <p class="indent">A network for the mutual support and advancement of freelance editors
       </p>
 
-      <p>
-        <a href="https://techwhirl.com" target="_blank">TechWhirl</a></p>
+      <p><i>
+        <a href="https://techwhirl.com" target="_blank">TechWhirl</a></i></p>
       <p class="indent">Helping the world explore the art of content and communication
       </p>
 
@@ -257,6 +257,8 @@
 
   </section>
 
+    <hr / width="75%">
+  
   <section id="main-content">
 
     <div class="wfh" align="center">
