--- a/Home.html
+++ b/Home.html
@@ -265,13 +265,13 @@
 
       <h3 id="read" align="center">#WorkFromHome #StayHomeStaySafe</h3>
       <p>
-        <a href="https://www.cdc.gov/coronavirus/2019-ncov/community/mental-health-non-healthcare.html">Resources for working from home during COVID-19</a>
+        <a href="https://www.cdc.gov/coronavirus/2019-ncov/community/mental-health-non-healthcare.html" target="_blank">Resources for working from home during COVID-19</a>
       </p>
 
       <figure>
         <img src="top-view-desk(s).jpg" alt="Photo created by freepik - www.freepik.com" />
         <figcaption>
-          <a href="https://www.freepik.com/photos/background">Photo created by freepik - www.freepik.com</a>
+          <a href="https://www.freepik.com/photos/background" target="_blank">Photo created by freepik - www.freepik.com</a>
         </figcaption>
       </figure>
     </div>
