--- a/Home.html
+++ b/Home.html
@@ -41,11 +41,12 @@
 
       <ul class="menu">
         <li><a href="#top">Home</a></li>
-        <li><a href="#abou">About</a></li>
+        <li><a href="#skills">Skills</a></li>
         <li><a href="#expe">Experience</a></li>
         <li><a href="#port">Portfolio</a></li>
         <li><a href="#educ">Education</a></li>
         <li><a href="#affl">Affiliations</a></li>
+        <li><a href="#abou">About</a></li>
         <li><a href="#read">Resources</a></li>
       </ul>
     </nav>
@@ -78,42 +79,64 @@
   </div>
   
   </section>
-
-  <span class="anchor" id="abou"></span>
+  
+  <span class="anchor" id="skills"></span>
 
   <section id="main-content">
 
     <div class="text">
 
-      <h1 align="center">About</h1>
+      <h1 align="center">Welcome</h1>
 
       <p>
-        Growing up, I always had a book in my hands, and my parents instilled in me foundational life skills like reading, writing, and perseverance. In school, my teachers fostered my love for literature through advanced reading and writing
-        programs. In high school and college, my extracurricular interests included creative writing, theatre, and humanities. I also developed an interest in computers, technology, and web design, adapting my skills to embrace an increasingly
-        technological era.</p>
-      <p>
-        In college, I enrolled in several technical communication courses, including technical writing, editing, project management, and web design. I also had the opportunity to work for UCF’s literary magazine, <i>The Florida Review</i>, as a student
-        editor intern. As an intern, I experienced the complete publishing process from start to finish: reading and selecting submissions, editing works for publication, and marketing the magazine to the public. As a senior, I joined the Society for
-        Technical Communicators to continue honing my skills as a writer and editor and make my transition from student to working professionally in the writing industry.
-      </p>
-      <p>
-        I have considerable marketing experience writing for an online advertising firm. As a freelance writer and self-starting entrepreneur, I worked with small businesses to create engaging SEO blogs, improve online search rankings, and increase
-        website traffic. My clients included HVAC companies, fashion designers, medical
-        equipment manufacturers, holistic practitioners, and home builders, to name a few. My job as a freelance writer allowed me to explore and write about a plethora of subjects while simultaneously adapting my writing to different audiences.
-      </p>
-      <p>
-        My personal life is an amalgam of hobbies and interests. In addition to being an avid reader, I'm a roller-coaster enthusiast, photography hobbyist, and movie connoisseur. I’m handy with a pen as well as a cordless drill, cast-iron skillet,
-        and Xbox controller. I'm a collector of unicorns, books, and unusually large sunglasses, but my most meaningful collections are memories, stories, and life lessons. I have stood in Ernest Hemingway's study in Key West, and I have walked along
-        Robert Frost's "Mending Wall" around his New Hampshire home, pseudo-spiritual experiences that augmented my appreciation for the written word. Literature and writing have opened my life to a world of possibilities and perspectives. My
-        life's mission to use my skills to make meaningful contributions to humankind's continuously evolving wealth of knowledge.
-      </p>
+        Thanks for visting my CV page. I'm an experienced writer and editor of technical, literary, marketing content. I'm passionate about working in STEM fields where I can expand my skills, explore new subjects, and contribute meaningful material
+        that
+        exceeds employer expectations and increases client satisfaction.</p>
 
+      <div class="skills">
+        <div class="column">
+          <ul>
+            <lh><b>Skills</b></lh>
+            <br /><br />
+            <li>Technical Writing, Editing</li>
+            <li>Project Management</li>
+            <li>SEO Marketing, Analytics</li>
+            <li>Advertising, Blog Writing</li>
+            <li>Literary Publishing</li>
+            <li>Internet Research</li>
+          </ul>
+        </div>
+        <div class="column">
+          <ul>
+            <lh><b>Tools</b></lh>
+            <br /><br />
+            <li>Microsoft Office</li>
+            <li>Google G Suite</li>
+            <li>Adobe Acrobat, Photoshop</li>
+            <li>HTML, CSS, Atom</li>
+            <li>CMOS, AP, APA, MLA</li>
+            <li>GitHub</li>
+          </ul>
+        </div>
+        <div class="column">
+          <ul>
+            <lh><b>Attributes</b></lh>
+            <br /><br />
+            <li>Detail-Oriented</li>
+            <li>Self-Starter</li>
+            <li>Independent</li>
+            <li>Problem Solver</li>
+            <li>Inquisitive</li>
+            <li>Adaptable</li>
+          </ul>
+        </div>
+      </div>
     </div>
   </section>
 
   <hr / width="75%">
 
-  <span class="anchor" id="expe"></span>
+ <span class="anchor" id="expe"></span>
 
   <section id="main-content">
 
@@ -220,6 +243,40 @@
       <p><a href="https://floridareview.cah.ucf.edu/" target="_blank">The Florida Review</a>, Student Editor Internship
       </p>
 
+    </div>
+  </section>
+
+  <hr / width="75%">
+  
+  <span class="anchor" id="abou"></span>
+
+  <section id="main-content">
+
+    <div class="text">
+
+      <h1 align="center">About</h1>
+
+      <p>
+        Growing up, I always had a book in my hands, and my parents instilled in me foundational life skills like reading, writing, and perseverance. In school, my teachers fostered my love for literature through advanced reading and writing
+        programs. In high school and college, my extracurricular interests included creative writing, theatre, and humanities. I also developed an interest in computers, technology, and web design, adapting my skills to embrace an increasingly
+        technological era.</p>
+      <p>
+        In college, I enrolled in several technical communication courses, including technical writing, editing, project management, and web design. I also had the opportunity to work for UCF’s literary magazine, <i>The Florida Review</i>, as a student
+        editor intern. As an intern, I experienced the complete publishing process from start to finish: reading and selecting submissions, editing works for publication, and marketing the magazine to the public. As a senior, I joined the Society for
+        Technical Communicators to continue honing my skills as a writer and editor and make my transition from student to working professionally in the writing industry.
+      </p>
+      <p>
+        I have considerable marketing experience writing for an online advertising firm. As a freelance writer and self-starting entrepreneur, I worked with small businesses to create engaging SEO blogs, improve online search rankings, and increase
+        website traffic. My clients included HVAC companies, fashion designers, medical
+        equipment manufacturers, holistic practitioners, and home builders, to name a few. My job as a freelance writer allowed me to explore and write about a plethora of subjects while simultaneously adapting my writing to different audiences.
+      </p>
+      <p>
+        My personal life is an amalgam of hobbies and interests. In addition to being an avid reader, I'm a roller-coaster enthusiast, photography hobbyist, and movie connoisseur. I’m handy with a pen as well as a cordless drill, cast-iron skillet,
+        and Xbox controller. I'm a collector of unicorns, books, and unusually large sunglasses, but my most meaningful collections are memories, stories, and life lessons. I have stood in Ernest Hemingway's study in Key West, and I have walked along
+        Robert Frost's "Mending Wall" around his New Hampshire home, pseudo-spiritual experiences that augmented my appreciation for the written word. Literature and writing have opened my life to a world of possibilities and perspectives. My
+        life's mission to use my skills to make meaningful contributions to humankind's continuously evolving wealth of knowledge.
+      </p>
+    <h3 id="read" align="center"><em>Thank you for visiting!</em></h3>
     </div>
   </section>
 
