--- a/Home.html
+++ b/Home.html
@@ -89,7 +89,7 @@
       <h1 align="center">Welcome</h1>
 
       <p>
-        Thanks for visting my CV page. I'm an experienced writer and editor of technical, literary, marketing content. I'm passionate about working in STEM fields where I can expand my skills, explore new subjects, and contribute meaningful material
+        Thanks for visiting my CV page. I'm an experienced writer and editor of technical, literary, marketing content. I'm passionate about working in STEM fields where I can expand my skills, explore new subjects, and contribute meaningful material
         that
         exceeds employer expectations and increases client satisfaction.</p>
 
