--- a/Home.html
+++ b/Home.html
@@ -178,7 +178,7 @@
 
       <h1 align="center">Portfolio</h1>
 
-      <p><i>Technical Documentation</i> (<a href="https://www.linkedin.com/in/nancyjeanlopez/" target="_blank">View on LinkedIn</a>)</p>
+      <p><i>Technical Documentation</i> (<a href="ENC4293 Style Guide Abridged.pdf" target="_blank">View PDF</a> or <a href="https://www.linkedin.com/in/nancyjeanlopez/" target="_blank">View on LinkedIn</a>)</p>
       <p class="indent">As Lead General Editor, I managed an 18-person team that produced a 283-page style guide for technical communication students and professionals. Authored the “Grammar” chapter and edited the entire guide for grammar, tone, and
         APA adherence. </p>
       <p><i>The Florida Review, Volume 44, Number 2, 2020</i> (<a href="https://floridareview.cah.ucf.edu/issue/44-2-fall-2020/" target="_blank">Link to <i>TFR</i></a>)</p>
