--- a/Home.html
+++ b/Home.html
@@ -234,7 +234,7 @@
       <p><a href="http://futuretechnicalcommunicators.com/" target="_blank">Future Technical Communicators of UCF</a>, Student Member
       </p>
 
-      <p><a href="https://www.stc.org/" target="_blank">Society for Technical Commination</a>, Student Member
+      <p><a href="https://www.stc.org/" target="_blank">Society for Technical Communication</a>, Student Member
       </p>
 
       <p><a href="https://stc-techedit.org/tiki-index.php" target="_blank">Technical Editing SIG</a>, Student Member
