--- a/Home.html
+++ b/Home.html
@@ -12,7 +12,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   
   <title>Nancy Jean Lopez | Technical Writer | Editor</title>
-
+  
   <meta name="description" content="Hello! I'm Nancy, and this is my curriculum vitae. I'm a technical writer, editor, and UCF graduate, passionate about working in STEM." />
   <meta name="og:url" content="https://nancyjeanlopez.github.io/MyCV/Home" />
   <meta property="og:image" content="https://nancyjeanlopez.github.io/MyCV/top-view-desk(s).jpg" /> 
@@ -21,6 +21,7 @@
   <meta property="og:image:height" content="200" />
   <meta property="og:image:alt" content="https://nancyjeanlopez.github.io/MyCV/top-view-desk(s).jpg" />
   
+  <link rel="shortcut icon" type="image/png" href="n(icon).png" />
   <link rel="stylesheet" type="text/css" href="stylev3.css" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
 
