--- a/Home.html
+++ b/Home.html
@@ -21,7 +21,7 @@
   <meta property="og:image:height" content="200" />
   <meta property="og:image:alt" content="https://nancyjeanlopez.github.io/MyCV/top-view-desk(s).jpg" />
   
-  <link rel="icon" type="image/png" href="n(icon).png" />
+  <link rel="icon" href="favicon.png" />
   <link rel="stylesheet" type="text/css" href="stylev3.css" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
 
