--- a/Home.html
+++ b/Home.html
@@ -72,7 +72,7 @@
       </h3>
       <p>Palm Coast, Florida, and Remote</p>
       <p><a href="mailto:nancyjeanlopez@gmail.com">NancyJeanLopez@gmail.com</a></p>
-      <p><a href="mailto:nancyjeanlopez@gmail.com" class="fa fa-google" target="_blank"></a><a href="https://www.linkedin.com/in/nancyjeanlopez/" class="fa fa-linkedin" target="_blank"><a href="https://github.com/nancyjeanlopez" class="fa fa-github" target="_blank"></a></a><a href="https://www.deviantart.com/nancyjeanlopez"
+      <p><a href="mailto:nancyjeanlopez@gmail.com" class="fa fa-google"></a><a href="https://www.linkedin.com/in/nancyjeanlopez/" class="fa fa-linkedin" target="_blank"><a href="https://github.com/nancyjeanlopez" class="fa fa-github" target="_blank"></a></a><a href="https://www.deviantart.com/nancyjeanlopez"
           class="fa fa-deviantart" target="_blank"></a></p>
 
     </div>
