--- a/Home.html
+++ b/Home.html
@@ -48,7 +48,6 @@
         <li><a href="#educ">Education</a></li>
         <li><a href="#affl">Affiliations</a></li>
         <li><a href="#abou">About</a></li>
-        <li><a href="#read">Resources</a></li>
       </ul>
     </nav>
 
@@ -282,48 +281,18 @@
   </section>
 
   <hr / width="75%">
-
-  <span class="anchor" id="read"></span>
-
-  <section id="main-content">
-
-    <div class="text">
-
-      <h1 id="read" align="center">Resources</h1>
-
-      <p><i>
-        <a href="https://idratherbewriting.com" target="_blank">I'd Rather Be Writing</a></i><p>
-      <p class="indent">Exploring technical writing trends and innovations
-      </p>
-
-      <p><i>
-        <a href="https://writethedocs.org" target="_blank">Write The Docs</a></i></p>
-      <p class="indent">A global community of people who care about documentation
-      </p>
-
-      <p><i>
-        <a href="https://the-efa.org" target="_blank">The Editorial Freelancers Association</a></i><p>
-      <p class="indent">A network for the mutual support and advancement of freelance editors
-      </p>
-
-      <p><i>
-        <a href="https://techwhirl.com" target="_blank">TechWhirl</a></i></p>
-      <p class="indent">Helping the world explore the art of content and communication
-      </p>
-
-    </div>
-
-  </section>
-
-    <hr / width="75%">
   
   <section id="main-content">
 
     <div class="wfh" align="center">
-
+      <h3 id="read" align="center">Resources</h3>
+      <p>
+        <a href="https://linktr.ee/nancyjeanlopez" target="_blank">My favorite tech comm resources on linktr.ee</a>
+        <br>
+        
       <h3 id="read" align="center">#WorkFromHome #StayHomeStaySafe</h3>
       <p>
-        <a href="https://www.cdc.gov/coronavirus/2019-ncov/community/mental-health-non-healthcare.html" target="_blank">Resources for working from home during COVID-19</a>
+        <a href="https://www.cdc.gov/coronavirus/2019-ncov/community/mental-health-non-healthcare.html" target="_blank">CDC resources for working from home during COVID-19</a>
       </p>
 
       <figure>
