--- a/Home.html
+++ b/Home.html
@@ -285,16 +285,14 @@
   <section id="main-content">
 
     <div class="wfh" align="center">
-      <h3 id="read" align="center">Resources</h3>
+      <h3 id="read" align="center">Resources & Links</h3>
       <p>
         <a href="https://linktr.ee/nancyjeanlopez" target="_blank">My favorite tech comm resources on linktr.ee</a>
       <br>
       <p>
         <a href="https://www.cdc.gov/coronavirus/2019-ncov/community/mental-health-non-healthcare.html" target="_blank">CDC resources for working from home during COVID-19</a>
       </p>
-      <br>
       <p id="read" align="center">#WorkFromHome #StayHomeStaySafe</p>
-      <br>
       <figure>
         <img src="top-view-desk(s).jpg" alt="Photo created by freepik - www.freepik.com" />
         <figcaption>
