--- a/Home.html
+++ b/Home.html
@@ -144,16 +144,16 @@
 
       <h1 id="expe" align="center">Experience</h1>
 
-      <p><i>Deluxe (formerly OrangeSoda)</i> - December 2015 to present</p>
-      <p class="indent">CONTENT WRITER - Wrote and edited website content for SEO marketing. Analyzed and implemented current marketing trends to increase website traffic. Researched small business and industry trends. Consulted subject matter
-        experts to create content. Edited content for grammar, style, and accuracy. </p>
-
       <p><i>Everest Realty Group LLC</i> - June 2016 to present</p>
       <p class="indent">MARKETING MANAGER - Created and published marketing campaigns via email, websites, and newsletters. Maintained the company <a href="https://www.louisebubser.com/" target="_blank">website</a>, monitored website traffic, and answered client
         inquiries.</p>
       <p class="indent">
         PERSONAL ASSISTANT - Organized realty documents using DotLoop. Hosted open house events and home showings. Provided technical support. Installed and maintained software and hardware.
       </p>
+      
+      <p><i>Deluxe (formerly OrangeSoda)</i> - December 2015 to September 2020</p>
+      <p class="indent">CONTENT WRITER - Wrote and edited website content for SEO marketing. Analyzed and implemented current marketing trends to increase website traffic. Researched small business and industry trends. Consulted subject matter
+        experts to create content. Edited content for grammar, style, and accuracy. </p>
 
       <p><i>United Water Restoration Inc.</i> - July 2014 to December 2015
       <p class="indent">INVOICING MANAGER – Created, processed, and managed invoices using Xactimate, SmartSheet, and Microsoft Office for a growing water, mold, and fire mitigation company. Organized and delegated daily tasks and projects to the
