--- a/Home.html
+++ b/Home.html
@@ -71,7 +71,7 @@
       </h3>
       <p>Palm Coast, Florida, and Remote</p>
       <p><a href="mailto:nancyjeanlopez@gmail.com">NancyJeanLopez@gmail.com</a></p>
-      <p><a href="mailto:nancyjeanlopez@gmail.com" class="fa fa-google"></a><a href="https://www.linkedin.com/in/nancyjeanlopez/" class="fa fa-linkedin" target="_blank"><a href="https://github.com/nancyjeanlopez" class="fa fa-github" target="_blank"></a></a><a href="https://www.deviantart.com/nancyjeanlopez"
+      <p><a href="https://drive.google.com/drive/folders/1putGiKADGc24feaKs5Q9VimG7tmb1Kb7?usp=sharing" class="fa fa-folder"></a><a href="https://www.linkedin.com/in/nancyjeanlopez/" class="fa fa-linkedin" target="_blank"><a href="https://github.com/nancyjeanlopez" class="fa fa-github" target="_blank"></a></a><a href="https://www.deviantart.com/nancyjeanlopez"
           class="fa fa-deviantart" target="_blank"></a></p>
 
     </div>
@@ -192,7 +192,7 @@
         I created this website to host the findings of my research paper on Internet Addiction (IA) and mental health resources for people with IA. This site demonstrates my understanding of HTML and CSS coding fundamentals as well as macro-photography and
         Photoshop skills.</p>
       
-      <h3 id="read" align="center"><em>For more writing and edting samples, click <u><a href="https://drive.google.com/drive/folders/1putGiKADGc24feaKs5Q9VimG7tmb1Kb7?usp=sharing" target="_blank">here</a></u>.</em></h3>
+      <h3 id="read" align="center"><em>For more writing and editing samples, click <u><a href="https://drive.google.com/drive/folders/1putGiKADGc24feaKs5Q9VimG7tmb1Kb7?usp=sharing" target="_blank">here</a></u>.</em></h3>
 
     </div>
   </section>
