--- a/Home.html
+++ b/Home.html
@@ -308,19 +308,17 @@
   <section id="main-content">
 
     <div class="wfh">
-      <h1 id="read">Resources & Links</h3>
+      <h1 id="read">Resources</h3>
       
       <p>
-        <i><a href="https://linktr.ee/nancyjeanlopez" target="_blank">Linktr.ee</i></a><br>My favorite tech comm resources
+        <i><a href="https://linktr.ee/nancyjeanlopez" target="_blank">Linktr.ee</i></a> - My favorite tech comm resources
       </p>
 
       <p>
-        <i><a href="https://www.cdc.gov/coronavirus/2019-ncov/community/mental-health-non-healthcare.html" target="_blank">Center for Disease Contol</i></a><br>CDC resources for working from home during COVID-19
+        <i><a href="https://www.cdc.gov/coronavirus/2019-ncov/community/mental-health-non-healthcare.html" target="_blank">Center for Disease Control</i></a> - CDC resources for working from home during COVID-19
       </p>
-   
-      <br>
-      
-      <h3 id="read"><em>#WorkFromHome #StayHomeStaySafe #WomenInSTEM</em></h3>
+ 
+      <p id="read"><em>#WorkFromHome #StayHomeStaySafe #WomenInSTEM</em></p>
 
     </div>
   </section>
