--- a/Home.html
+++ b/Home.html
@@ -317,8 +317,13 @@
       <p>
         <i><a href="https://www.cdc.gov/coronavirus/2019-ncov/community/mental-health-non-healthcare.html" target="_blank">Center for Disease Control</i></a> - CDC resources for working from home during COVID-19
       </p>
+      
+      <p>
+        <i><a href="https://womeninstem.org/" target="_blank">Women In STEM</a></i> - Empowering women to pursue careers in Science, Technology, Engineering, and Mathemathics
  
-      <p id="read"><em>#WorkFromHome #StayHomeStaySafe #WomenInSTEM</em></p>
+      <br>
+        
+      <p id="read" align="center"><em>#WorkFromHome #StayHomeStaySafe #WomenInSTEM</em></p>
 
     </div>
   </section>
