--- a/Home.html
+++ b/Home.html
@@ -148,7 +148,7 @@
       <h1 id="expe">Experience</h1>
 
       <p><i>Everest Realty Group LLC</i> - June 2016 to present</p>
-      <p class="indent">MARKETING MANAGER - Created and published marketing campaigns via email, websites, and newsletters. Maintained the company <a href="https://www.louisebubser.com/" target="_blank">website</a>, monitored website traffic, and answered client
+      <p class="indent">MARKETING MANAGER - Created and published marketing campaigns via email, websites, and newsletters. Maintained the company <u><a href="https://www.louisebubser.com/" target="_blank">website</a></u>, monitored website traffic, and answered client
         inquiries.</p>
       <p class="indent">
         PERSONAL ASSISTANT - Organized realty documents using DotLoop. Hosted open house events and home showings. Provided technical support. Installed and maintained software and hardware.
